--- a/src/app.css
+++ b/src/app.css
@@ -44,14 +44,14 @@ header {
     color: #F2BD00;
 }
 
-.homePage {
+.home-page {
     width: 1440px;
     height: 910px;
     display: flex;
     align-items: center;
 }
 
-.photoFace {
+.home-page-img {
     width: 564px;
     height: 564px;
     flex-shrink: 0;
@@ -65,7 +65,7 @@ header {
 }
 
 
-.homePage h3 {
+.home-page h3 {
     color: #2000E7;
     font-family: 'Poppins', sans-serif;
     font-size: 30px;
@@ -76,8 +76,7 @@ header {
     margin-left: 80px;
 }
 
-.homePage h2 {
-    
+.home-page h2 {
     color:#2000E7;
     font-family: 'Poppins';
     font-size: 48px;
@@ -89,7 +88,7 @@ header {
     width: 447px;
 }
 
-.homePage p {
+.home-page p {
     color: #383838;
     font-family: 'Poppins';
     font-size: 24px;
@@ -129,18 +128,16 @@ header {
 }
 
 
-.fotoAbout {
+.about-img {
     width: 925px;
     height: 925px;
     flex-shrink: 0;
     margin-top: -20px;
-
 }
 
 span {
    color: #F2BD00;
 }
-
 
 .about-1 {
     display: flex;
@@ -166,7 +163,7 @@ span {
     margin-left: 45px;
 }
 
- .about p {
+.about p {
     font-family: 'Poppins', sans-serif;
     width: 415px;
     margin-bottom: 20px;
@@ -180,10 +177,9 @@ span {
     text-align: left;
     color: #000000;
     margin-left: 45px;
- }
+}
 
-
- .btn-3 {
+.btn-3 {
     color: #FFF;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
@@ -198,18 +194,18 @@ span {
     flex-shrink: 0;
     padding: 20px 60px;
     margin-left: 80px;
- }
+}
 
- .progects {
+.progects {
     background: #FFD69633;
     width: 1440px;
     height: 910px;
     top: 2277px;
     text-align: center;
     margin: 300px 0;
- }
+}
 
- .progects h2 {
+.progects h2 {
     color: #3B1FEA;
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
@@ -218,9 +214,9 @@ span {
     line-height: normal;
     letter-spacing: 9.6px;
     padding-top: 35px;
- }
+}
 
- .progects p {
+.progects p {
     color: #000;
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
@@ -228,39 +224,29 @@ span {
     font-weight: 400;
     line-height: normal;
     margin-bottom: 50px;
- }
+}
 
- .img-progects {
+.img-progects {
     width: 246px;
     height: 180px;
     flex-shrink: 0;
     margin-bottom: 50px;
     margin-left: 100px;
     margin-right: 100px;
- }
+}
  
- .progects-1 {
+.progects-1 {
     display: flex;
- }
+}
 
- .progects-2 {
-    display: flex;
- }
-
- .progects-3 {
-    display: flex;
- }
-
-
- .contact {
+.contact {
     width: 1440px;
     height: 1316px;
     flex-shrink: 0;
     background: #43BAFD0F;
 }
 
-
- .contact-btn {
+.contact-btn {
     width: 653px;
     height: 94px;
     top: 4002px;
@@ -269,9 +255,9 @@ span {
     box-shadow: 13px 21px 4px 0px rgba(0, 0, 0, 0.25);
     flex-shrink: 0;
     margin-bottom: 80px;
-  }
+}
 
-  .contact-form {
+.contact-form {
     height: 265px;
     width: 653px;
     margin-left: 66px;
@@ -279,10 +265,9 @@ span {
     box-shadow: 13px 21px 4px 0px #00000040;
     resize: none;
     margin-bottom: 50px;
-  }
+}
   
-
-  .knopka {
+.contact-button {
     width: 327px;
     height: 94px;
     top: 4491px;
@@ -297,9 +282,9 @@ span {
     background: #FFF;
     box-shadow: 13px 21px 4px 0px rgba(0, 0, 0, 0.25);
     border: #fff;
-  }
+}
 
- .sr-only {
+.sr-only {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -307,22 +292,22 @@ span {
     overflow: hidden;
     white-space: nowrap;
     border: 0;
-  }
+}
 
-  .contact img {
+.contact img {
     width: 958px;
     height: 958px;
     flex-shrink: 0;
     text-align: center;
     margin-left: -200px;
-  }
+}
 
-  .contact-container {
+.contact-container {
     display: flex;
     align-items: center;
- }
+}
 
- .contact h2 {
+.contact h2 {
     font-family: 'Poppins', sans-serif;
     color: #220BE8;
     font-size: 64px;
@@ -333,9 +318,9 @@ span {
     margin-left: 457px;
     margin-bottom: 10px;
     padding-top: 70px;
- }
+}
 
- .contact p {
+.contact p {
     font-family: 'Poppins', sans-serif;
     color: #000000;
     width: 591px;
@@ -345,9 +330,9 @@ span {
     line-height: 36px;
     margin-left: 435px;
     margin-bottom: 110px;
- }
+}
 
- .text {
+.text {
     color: #000;
     font-family: 'Poppins', sans-serif;
     font-size: 32px;
@@ -355,21 +340,21 @@ span {
     font-weight: 400;
     line-height: normal;
     border: #fff;
- }
+}
 
- .question {
+.question {
     background: #FFD69633;
     width: 1440px;
     height: 809px;
     top: 4983px;
     margin-top: 300px;
- }
+}
 
- .question-container {
+.question-container {
     display: flex;
- }
+}
  
- .question-logo {
+.question-logo {
     color: #0E0578;
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
@@ -380,9 +365,9 @@ span {
     margin-left: 75px;
     margin-bottom: 50px;
     margin-top: 135px;
- }
+}
 
- .question-form {
+.question-form {
     width: 323px;
     height: 97px;
     border-radius: 30px;
@@ -395,11 +380,10 @@ span {
     line-height: normal;
     margin-left: 25px;
     text-align: left;
-    padding-left: 10px;
-    
- }
+    padding-left: 10px;   
+}
 
- .question-btn {
+.question-btn {
     width: 178px;
     height: 97px;
     flex-shrink: 0;
@@ -413,23 +397,21 @@ span {
     line-height: normal;
     border: 4px solid #F965FC;
     margin-left: -50px;
- }
+}
 
-
- .question-footer {
+.question-table {
     display: flex;
     margin-bottom: 100px;
     justify-content: space-between;
     margin-left: 100px;
- }
+}
 
- .pink {
+.pink {
     display: flex;
     align-items: center;
- }
+}
 
-
- .question-footer ul li {
+.question-table ul li {
     color: #000;
     font-family: Jost;
     font-size: 31px;
@@ -438,9 +420,9 @@ span {
     line-height: normal;
     list-style-type: none;
     padding: 20px;
- }
+}
 
- h4 {
+h4 {
     color: #000;
     font-family: Jost;
     font-size: 31px;
@@ -449,23 +431,23 @@ span {
     line-height: normal;
     margin-top: 135px;
     padding: 20px;
- }
+}
 
- .adress {
+.adress {
     width: 311px;
     height: 188px;
     flex-shrink: 0;
- }
+}
 
- .line {
+.line {
     background: #000;
     width: 1334px;
     height: 3px;
     margin-left: 45px;
     margin-bottom: 80px;
- }
+}
 
- .footer {
+.footer {
     color: #000;
     font-family: Jost;
     font-size: 32px;
@@ -473,4 +455,4 @@ span {
     font-weight: 400;
     line-height: normal;
     margin-left: 45px;
- }
+}
